[2019-2] Switch to constructor initialization